--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,8 @@ djangorestframework-simplejwt==4.7.2
 Pillow==9.3.0
 PyJWT==2.1.0
 requests==2.26.0
+djoser==2.1.0
+flake8==5.0.4
+flake8-docstrings==1.7.0
+pep8-naming==0.13.3
+pycodestyle==2.9.1
