--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,6 @@ PyJWT==2.1.0
 requests==2.26.0
 djoser==2.1.0
 flake8==5.0.4
-flake8-docstrings==1.7.0
 pep8-naming==0.13.3
 pycodestyle==2.9.1
+django-filter==23.1
